default/objects/Non_Standard_Requirement_Discussion__c/Non_Standard_Requirement_Discussion__c.object-meta.xml
<CustomObject>
    <label>Non Standard Requirement Discussion</label>
    <nameField>
        <displayFormat>CMT-{000000}</displayFormat>
        <label>Discussion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Standard Requirement Discussions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>