default/objects/Non_Standard_Requirement_Discussion__c/fields/Expected_Design_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Design_Response_Date__c</fullName>
    <formula>Non_Standard_Requirement__r.Expected_Design_Response_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Design Response Date</label>
    <type>DateTime</type>
</CustomField>