default/objects/Non_Standard_Requirement_Discussion__c/fields/Final_Comment__c.field-meta.xml
<CustomField>
    <fullName>Final_Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>