default/objects/Non_Standard_Requirement_Discussion__c/fields/Non_Standard_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Requirement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Non Standard Requirement</label>
    <referenceTo>Non_Standard_Requirement__c</referenceTo>
    <relationshipLabel>Non Standard Requirement Discussions</relationshipLabel>
    <relationshipName>Non_Standard_Requirement_Discussions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>