default/objects/Non_Standard_Requirement_Discussion__c/fields/Non_Standard_Requirement_Design__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Requirement_Design__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non Standard Requirement Design</label>
    <referenceTo>Non_Standard_Requirement__c</referenceTo>
    <relationshipLabel>Design Discussion</relationshipLabel>
    <relationshipName>Non_Standard_Requirement_Discussions_D</relationshipName>
    <type>Lookup</type>
</CustomField>