default/objects/Non_Standard_Requirement_Discussion__c/fields/Non_Standard_Requirement_Sales__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Requirement_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non Standard Requirement Sales</label>
    <referenceTo>Non_Standard_Requirement__c</referenceTo>
    <relationshipLabel>Sales Discussion</relationshipLabel>
    <relationshipName>Non_Standard_Requirement_Discussions_S</relationshipName>
    <type>Lookup</type>
</CustomField>