default/objects/Non_Standard_Requirement_Discussion__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>