default/objects/Non_Standard_Requirement_Discussion__c/recordTypes/Design_Discussion.recordType-meta.xml
<RecordType>
    <fullName>Design_Discussion</fullName>
    <active>true</active>
    <label>Design Discussion</label>
</RecordType>