default/objects/Non_Standard_Requirement_Discussion__c/recordTypes/Sales_Discussion.recordType-meta.xml
<RecordType>
    <fullName>Sales_Discussion</fullName>
    <active>true</active>
    <label>Sales Discussion</label>
</RecordType>