default/objects/Non_Standard_Requirement_Discussion__c/validationRules/Provide_Final_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Provide_Final_Comment</fullName>
    <active>true</active>
    <description>Is Status is completed final comment should Provide</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Completed&apos;),LEN (Final_Comment__c ) = 0)</errorConditionFormula>
    <errorDisplayField>Final_Comment__c</errorDisplayField>
    <errorMessage>Please Provide Final Comment</errorMessage>
</ValidationRule>